[package]
name = "rshgf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rshgf"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"    # The source file of the target.

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
numpy = "0.21"