[package]
name = "hgf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hgf"
crate-type = ["cdylib"]
path = "src/lib.rs"    # The source file of the target.

[dependencies]
pyo3 = { version = "0.22.3", features = ["extension-module"] }